--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
   rel="stylesheet"
   href="https://video-react.github.io/assets/video-react.css"
 />
+
+<script
+src="https://upload-widget.cloudinary.com/global/all.js"
+type="text/javascript"
+></script>
     <title>Oleander Nursery and Primary School | Welcome</title>
   </head>
   <body>
